# testceres

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/testapp/: CMakeLists.txt
src/testapp/inc/: eigentypes.hpp  mathtypes.hpp  shapeoptimizingdeformationgradientcost.hpp  weightoptimizingcostanalytic.hpp
src/testapp/src/: test_2d_bs.cpp  test_curvefit.cpp  test_hello.cpp  test_powell_func.cpp
